--- a/vanilla-ts/index.html
+++ b/vanilla-ts/index.html
@@ -3,17 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Canvas Excel</title>
+    <title>Excel Spreadsheet</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        /* Fallback fonts since Calibri may not be available on all systems */
+        @font-face {
+            font-family: 'Calibri';
+            src: local('Calibri'), local('Calibri Regular');
+            font-weight: normal;
+            font-style: normal;
+        }
+        
+        /* Fallback to system fonts if Calibri is not available */
+        body {
+            font-family: 'Calibri', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        }
+    </style>
+        
     <script src="https://kit.fontawesome.com/e99f7372e9.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div id="app">
         <div class="toolbar">
             <button id="loadData">Load Data</button>
-            <button id="undo"><i class="fa-solid fa-rotate-left"></i></button>
-            <button id="redo"><i class="fa-solid fa-rotate-right"></i></button>
-            <button id="clear"><i class="fa-solid fa-eraser"></i></button>
+            <button id="undo" title="Undo (Ctrl+Z)"><i class="fa-solid fa-rotate-left"></i></button>
+            <button id="redo" title="Redo (Ctrl+Y)"><i class="fa-solid fa-rotate-right"></i></button>
+            <button id="clear" title="Clear All"><i class="fa-solid fa-eraser"></i></button>
+            <input type="text" id="calculationInput" placeholder="=SUM(A1:B2)">
+            <div class="zoom-controls">
+                <button id="zoomOut" title="Zoom Out (Ctrl+Mouse Wheel)">-</button>
+                <span id="zoomLevel">100%</span>
+                <button id="zoomIn" title="Zoom In (Ctrl+Mouse Wheel)">+</button>
+                <button id="zoomReset" title="Reset Zoom">Reset</button>
+            </div>
             <div class="stats">
                 <span id="selectionStats"></span>
             </div>
