--- a/vanilla-ts/index.html
+++ b/vanilla-ts/index.html
@@ -29,6 +29,15 @@
             <button id="undo" title="Undo (Ctrl+Z)"><i class="fa-solid fa-rotate-left"></i></button>
             <button id="redo" title="Redo (Ctrl+Y)"><i class="fa-solid fa-rotate-right"></i></button>
             <button id="clear" title="Clear All"><i class="fa-solid fa-eraser"></i></button>
+            
+            <!-- Insert buttons -->
+            <div class="button-group">
+                <button id="insertRowAbove" title="Insert Row Above (Ctrl+Shift+↑)"><i class="fa-solid fa-arrow-up"></i> Row</button>
+                <button id="insertRowBelow" title="Insert Row Below (Ctrl+Shift+↓)"><i class="fa-solid fa-arrow-down"></i> Row</button>
+                <button id="insertColumnLeft" title="Insert Column Left (Ctrl+Shift+←)"><i class="fa-solid fa-arrow-left"></i> Col</button>
+                <button id="insertColumnRight" title="Insert Column Right (Ctrl+Shift+→)"><i class="fa-solid fa-arrow-right"></i> Col</button>
+            </div>
+            
             <input type="text" id="calculationInput" placeholder="=SUM(A1:B2)">
             <div class="zoom-controls">
                 <button id="zoomOut" title="Zoom Out (Ctrl+Mouse Wheel)">-</button>
