feat: add text formatting options (bold, italic, underline, strikethrough) to the spreadsheet
- Updated index.html to include buttons for text formatting.
- Enhanced main.ts to handle click events for formatting buttons.
- Modified Cell.ts to support new styling options and methods for getting and setting styles.
- Updated interfaces.ts to include additional style properties.
- Added CSS styles for formatting buttons to improve UI.

--- a/vanilla-ts/index.html
+++ b/vanilla-ts/index.html
@@ -39,6 +39,15 @@
                 <button id="clear" title="Clear All"><i class="fa-solid fa-eraser"></i></button>
             </div>
 
+            <!-- Bold, Italic, Underline, Strikethrough -->
+            <div class="button-group format-group">
+                <button id="bold" title="Bold (Ctrl+B)"><i class="fa-solid fa-bold"></i></button>
+                <button id="italic" title="Italic (Ctrl+I)"><i class="fa-solid fa-italic"></i></button>
+                <button id="underline" title="Underline (Ctrl+U)"><i class="fa-solid fa-underline"></i></button>
+                <button id="strikethrough" title="Strikethrough (Ctrl+D)"><i
+                        class="fa-solid fa-strikethrough"></i></button>
+            </div>
+
             <!-- Insert buttons -->
             <div class="button-group">
                 <button id="insertRowAbove" title="Insert Row Above (Ctrl+Shift+↑)"><i class="fa-solid fa-arrow-up"></i>
