structure the functions

--- a/vanilla-ts/index.html
+++ b/vanilla-ts/index.html
@@ -60,6 +60,13 @@
                         class="fa-solid fa-arrow-right"></i> Col</button>
             </div>
 
+            <!-- Remove buttons -->
+            <div class="button-group">
+                <button id="removeRow" title="Remove Row (Ctrl+Shift+R)"><i class="fa-solid fa-trash"></i> Row</button>
+                <button id="removeColumn" title="Remove Column (Ctrl+Shift+C)"><i class="fa-solid fa-trash"></i>
+                    Col</button>
+            </div>
+
             <div class="calculation-group">
                 <input type="text" id="calculationInput" placeholder="=SUM(A1:B2)">
             </div>
