feat: Implement Excel file upload and processing functionality
- Added ExcelFileHandler utility for reading and processing Excel files.
- Integrated file input in the UI for loading Excel files.
- Updated EventHandler to clear copied selection on Escape key press.
- Enhanced Renderer to support marching ants animation for copied cells.
- Modified Grid class to load Excel data and update dimensions accordingly.
- Updated DataGenerator to use numeric types for age and salary.
- Improved styling for file input and toolbar buttons.
- Added validation for Excel file types and improved error handling during file upload.

--- a/vanilla-ts/index.html
+++ b/vanilla-ts/index.html
@@ -29,7 +29,11 @@
         <div class="toolbar">
             <!-- Data operations -->
             <div class="button-group data-group">
-                <button id="loadData">Load Data</button>
+                <button id="loadData">Load Sample Data</button>
+                <label for="excelFileInput" class="file-input-label">
+                    <i class="fa-solid fa-file-excel"></i> Open Excel File
+                </label>
+                <input type="file" id="excelFileInput" accept=".xlsx,.xls,.xlsm,.xlsb" style="display: none;">
             </div>
 
             <!-- Edit operations -->
