feat: Adjust line drawing for text alignment in the Renderer class

--- a/vanilla-ts/index.html
+++ b/vanilla-ts/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Excel Spreadsheet</title>
     <link rel="stylesheet" href="style.css">
+    <!-- <link rel="icon" type="image/png" href="excel.png"> -->
     <style>
         /* Fallback fonts since Calibri may not be available on all systems */
         @font-face {
