feat: Add text alignment functionality with buttons and update handling for numeric cells

--- a/vanilla-ts/index.html
+++ b/vanilla-ts/index.html
@@ -53,6 +53,13 @@
                         class="fa-solid fa-strikethrough"></i></button>
             </div>
 
+            <!-- Text alignment buttons -->
+            <div class="button-group align-group">
+                <button id="alignLeft" title="Align Left"><i class="fa-solid fa-align-left"></i></button>
+                <button id="alignCenter" title="Align Center"><i class="fa-solid fa-align-center"></i></button>
+                <button id="alignRight" title="Align Right"><i class="fa-solid fa-align-right"></i></button>
+            </div>
+
             <!-- Insert buttons -->
             <div class="button-group">
                 <button id="insertRowAbove" title="Insert Row Above (Ctrl+Shift+↑)"><i class="fa-solid fa-arrow-up"></i>
