feat: Add loading indicator during Excel file export process

--- a/vanilla-ts/index.html
+++ b/vanilla-ts/index.html
@@ -38,6 +38,10 @@
                 <button id="saveData"><i class="fas fa-download"></i> Download</button>
             </div>
 
+            <div id="loader" style="display: none;">
+                Exporting data, please wait...
+            </div>
+
             <!-- Edit operations -->
             <div class="button-group edit-group">
                 <button id="undo" title="Undo (Ctrl+Z)"><i class="fa-solid fa-rotate-left"></i></button>
