refactor: Enhance documentation and clean up unused elements in HandlerManager and RowResizeHandler

--- a/vanilla-ts/index.html
+++ b/vanilla-ts/index.html
@@ -35,11 +35,7 @@
                     <i class="fa-solid fa-file-excel"></i> Open Excel File
                 </label>
                 <input type="file" id="excelFileInput" accept=".xlsx,.xls,.xlsm,.xlsb" style="display: none;">
-                <button id="saveData"><i class="fas fa-download"></i> Download</button>
-            </div>
-
-            <div id="loader" style="display: none;">
-                Exporting data, please wait...
+                <!-- <button id="saveData"><i class="fas fa-download"></i> Download</button> -->
             </div>
 
             <!-- Edit operations -->
